--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/express": "^5.0.6",
     "@types/mongoose": "^5.11.97",
     "@types/uuid": "^11.0.0",
+    "cron": "^4.4.0",
     "dayjs": "^1.11.19",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
