--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": " tsc --b && nodemon dist/index.js"
+    "dev": " tsc --b && nodemon dist/index.js",
+    "build": "tsc --b",
+    "start": "node dist/index.js"
   },
   "keywords": [],
   "author": "",
